--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,7 @@ uvicorn==0.19.0
 virtualenv==20.16.6
 virtualenv-clone==0.5.7
 pytest==7.2.0
+requests==2.28.1
+httpx==0.23.0
+aiohttp==3.8.3
+asgi-lifespan==2.0.0
